@@ -1,5 +1,10 @@
 #! /usr/bin/make -f
 
+WITHOUT_MPI:=no
+JUST_MPI:=no
+with_mpi:=--with-mpi
+MPI_CONFIG = "using mpi ;"
+
 # Boost libraries for which we want separate packages
 # context is conditionally compiled because it is not supported yet on several architectures
 # coroutine depends on context, so it is also conditionally compiled
@@ -7,6 +12,18 @@ boost_libs := atomic chrono date-time exception filesystem		\
               graph graph-parallel iostreams locale log math mpi	\
               mpi-python program-options python random regex		\
               serialization signals system test thread timer wave
+
+ifeq ($(WITHOUT_MPI),yes)
+boost_libs := $(filter-out graph-parallel mpi mpi-python, $(boost_libs))
+with_mpi:=
+MPI_CONFIG:=
+export DH_OPTIONS+=$(addprefix -N,$(shell dh_listpackages | grep -e graph-parallel -e mpi -e all-dev))
+endif
+
+ifeq ($(JUST_MPI),yes)
+boost_libs := graph-parallel mpi mpi-python
+export DH_OPTIONS+=$(addprefix -N,$(shell dh_listpackages | grep -v -e graph-parallel -e mpi -e all-dev))
+endif
 
 # these are special cases, where /usr/lib name differs from Boost library name
 boost_lib_log := log log_setup
@@ -23,12 +40,11 @@ boost_suffixes_mpi-python := $(boost_suffixes_python)
 
 # Files that are generated by filtering a template
 filtered_files = \
-	debian/libboost-doc.doc-base \
-	debian/libboost-python-dev.postinst \
-	debian/libboost-python-dev.prerm
+	debian/libboost-doc.doc-base
 
 DPKG_EXPORT_BUILDFLAGS = 1
 include /usr/share/dpkg/buildflags.mk
+include /usr/share/dpkg/architecture.mk
 
 %:
 	dh $@ --with python2 --with python3
@@ -40,8 +56,8 @@ override_dh_auto_build: $(bjam) debian/bjam.1
 	for pyver in $(pyversions); do \
 	 	pyid=$$(echo $$pyver | tr -d .); \
 		echo "Building Boost.Python for python version $$pyver"; \
-	 	$(JAM) --with-python --with-mpi --python-buildid=py$$pyid python=$$pyver; \
-	 	mv stage/lib/mpi.so stage/lib/mpi-py$$pyid.so; \
+	 	$(JAM) --with-python $(with_mpi) --python-buildid=py$$pyid python=$$pyver; \
+	 	mv stage/lib/mpi.so stage/lib/mpi-py$$pyid.so || true; \
 	done
 
 	cd $(bbv2dir) && ./bootstrap.sh --with-toolset=gcc
@@ -64,24 +80,31 @@ override_dh_auto_clean: clean-debhelper
 	rm -rf bin.v2 dist
 	rm -rf user-config.jam
 	rm -rf debian/bjam.1
+ifeq ($(WITHOUT_MPI),yes)
+	# TODO, should also remove/add build-deps as well.
+	grep-dctrl -FPackage -v mpi -o -FPackage graph-parallel -o -FPackage all-dev debian/control.in > debian/control
+else
+	cp debian/control.in debian/control
+endif
 	dh_auto_clean
 
 override_dh_compress:
 	dh_compress -Xlibboost$(PKGVERSION)-doc/HTML
 
 override_dh_install:
-	$(JAM) --prefix=$(CURDIR)/debian/tmp/usr $(JAM_WITHOUT) --without-python install
+	$(JAM) --prefix=$(CURDIR)/debian/tmp/usr $(JAM_WITHOUT) \
+		--libdir=$(CURDIR)/debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH) \
+		--without-python install
 	for pyver in $(pyversions); do \
 		pyid=`echo $$pyver | tr -d .`; \
-		$(JAM) --prefix=$(CURDIR)/debian/tmp/usr install --with-python --with-mpi --python-buildid=py$$pyid python=$$pyver; \
+		$(JAM) --prefix=$(CURDIR)/debian/tmp/usr \
+			--libdir=$(CURDIR)/debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH) \
+			install --with-python $(with_mpi) --python-buildid=py$$pyid python=$$pyver; \
 	done
 
 	# Install Boost.Build v2 & jam
-	cd $(bbv2dir) && ./bjam install --prefix=$(CURDIR)/debian/tmp/usr
+	cd $(bbv2dir) && ./bjam install --prefix=$(CURDIR)/debian/tmp/usr --libdir=$(CURDIR)/debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)
 	mv debian/tmp/usr/share/boost-build/example debian/boost-build-examples
-
-	install --mode=755 -D debian/rtupdate debian/tmp/usr/share/python/runtime.d/libboost-python$(PKGVERSION)-dev.rtupdate
-	install --mode=755 -D debian/rtupdate debian/tmp/usr/share/python/runtime.d/libboost-mpi-python$(PKGVERSION)-dev.rtupdate
 
 	find debian/tmp/usr/include debian/tmp/usr/share/boost-build -type f | xargs chmod 644
 	find debian/tmp -name .cvsignore | xargs rm -f
@@ -93,16 +116,16 @@ override_dh_install:
 	dh_install -plibboost$(PKGVERSION)-dev \
 	   debian/tmp/usr/include/boost \
 	   usr/include
-	dh_install -plibboost$(PKGVERSION)-dev \
+	dh_install -plibboost$(PKGVERSION)-tools-dev \
 	   debian/tmp/usr/bin/bjam \
 	   dist/bin/bcp \
 	   dist/bin/inspect \
 	   dist/bin/quickbook \
 	   usr/bin
-	dh_installman -plibboost$(PKGVERSION)-dev debian/bjam.1 debian/bcp.1 debian/inspect.1 debian/quickbook.1
-	dh_install -plibboost$(PKGVERSION)-dev tools/boostbook/xsl/* usr/share/boostbook/xsl
-	dh_install -plibboost$(PKGVERSION)-dev tools/boostbook/dtd/* usr/share/boostbook/dtd
-	dh_install -plibboost$(PKGVERSION)-dev debian/tmp/usr/share/boost-build
+	dh_installman -plibboost$(PKGVERSION)-tools-dev debian/bjam.1 debian/bcp.1 debian/inspect.1 debian/quickbook.1
+	dh_install -plibboost$(PKGVERSION)-tools-dev tools/boostbook/xsl/* usr/share/boostbook/xsl
+	dh_install -plibboost$(PKGVERSION)-tools-dev tools/boostbook/dtd/* usr/share/boostbook/dtd
+	dh_install -plibboost$(PKGVERSION)-tools-dev debian/tmp/usr/share/boost-build
 
 	# package libboost-date-time$(PKGVERSION)-dev
 	dh_installdocs -plibboost-date-time$(PKGVERSION)-dev libs/date_time/data
@@ -124,6 +147,20 @@ override_dh_install:
 	   usr/share/doc/libboost$(PKGVERSION)-doc/examples \
 	   usr/share/doc/libboost-doc/examples
 
+	dh_link -plibboost-python$(PKGVERSION)-dev \
+	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_python-py27.a \
+	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_python.a
+	dh_link -plibboost-python$(PKGVERSION)-dev \
+	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_python-py27.so \
+	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_python.so
+
+	dh_link -plibboost-mpi-python$(PKGVERSION)-dev \
+	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_mpi_python-py27.a \
+	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_mpi_python.a
+	dh_link -plibboost-mpi-python$(PKGVERSION)-dev \
+	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_mpi_python-py27.so \
+	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_mpi_python.so
+
 	dh_installexamples -plibboost$(PKGVERSION)-doc debian/boost-build-examples
 	mkdir -p $(exampledir)
 	cat debian/example-files | xargs cp -a --parents --target-directory=$(exampledir)
@@ -135,14 +172,8 @@ override_dh_install:
 		pyid=`echo $$pyver | tr -d .`; \
 		dh_install -plibboost-mpi-python$(SOVERSION) libs/mpi/build/__init__.py usr/lib/python$$pyver/site-packages/boost; \
 		dh_installdirs -plibboost-mpi-python$(SOVERSION) usr/lib/python$$pyver/site-packages/boost; \
-		cp stage/lib/mpi-py$$pyid.so debian/libboost-mpi-python$(SOVERSION)/usr/lib/python$$pyver/site-packages/boost/mpi.so; \
+		cp stage/lib/mpi-py$$pyid.so debian/libboost-mpi-python$(SOVERSION)/usr/lib/python$$pyver/site-packages/boost/mpi.so || true; \
 	done
-	# package libboost-mpi-python$(PKGVERSION)-dev
-	dh_install -plibboost-python$(PKGVERSION)-dev --autodest \
-	   debian/tmp/usr/share/python/runtime.d/libboost-mpi-python$(PKGVERSION)-dev.rtupdate
-	# package libboost-python$(PKGVERSION)-dev
-	dh_install -plibboost-python$(PKGVERSION)-dev --autodest \
-	   debian/tmp/usr/share/python/runtime.d/libboost-python$(PKGVERSION)-dev.rtupdate
 
 	cd libs/python/pyste/install && python setup.py install --no-compile --prefix=$(pyste_prefix) --install-lib=$(pyste_prefix)/share/pyshared
 	mv $(pyste_prefix)/bin/pyste.py $(pyste_prefix)/bin/pyste
@@ -151,7 +182,11 @@ override_dh_install:
 	dh_install
 
 override_dh_strip:
+ifeq ($(JUST_MPI),no)
 	dh_strip --dbg-package=libboost$(PKGVERSION)-dbg -X"-d-"
+else
+	dh_strip -X"-d-"
+endif
 
 
 # set the number of build jobs
@@ -180,7 +215,7 @@ boost_suffixes = $(if $(boost_suffixes_$(1)), $(boost_suffixes_$(1)),"")
 # Helpers to make basic and decorated library names
 # Input: library, variant, suffix
 # Return: base library filename for short or full name
-mk_base_name = usr/lib/libboost_$(subst -,_,$(1))$(2)$(3)
+mk_base_name = usr/lib/$(DEB_HOST_MULTIARCH)/libboost_$(subst -,_,$(1))$(2)$(3)
 
 # Input: component, variant
 # Return: package name for shared library or development
@@ -310,8 +345,6 @@ else
 JAM_OPT += --disable-long-double
 endif
 
-MPI_CONFIG = "using mpi ;"
-
 exampledir = debian/libboost$(PKGVERSION)-doc/usr/share/doc/libboost$(PKGVERSION)-doc/examples
 htmldir = debian/libboost$(PKGVERSION)-doc/usr/share/doc/libboost$(PKGVERSION)-doc/HTML
 pyste_prefix = $(CURDIR)/debian/libboost-python$(PKGVERSION)-dev/usr
@@ -326,6 +359,7 @@ JAM = $(bjam) $(JOBS) -d2 $(JAM_OPT) --layout=system --ignore-site-config --user
 
 $(bjam):
 	./bootstrap.sh --with-icu=/usr --prefix=$(CURDIR)/debian/tmp/usr \
+		--libdir=$(CURDIR)/debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH) \
 	  || cat bootstrap.log
 
 debian/bjam.1: $(bjam)
